@@ -1,3 +1,4 @@
+#!/usr/bin/env python
 # jhbuild - a build script for GNOME 1.x and 2.x
 # Copyright (C) 2001-2003  James Henstridge
 #
